--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -25,9 +25,13 @@ models:
     +grants:
       select: ['transformer', 'reporter']
 
+  +persist_docs:
+    relation: true
+    columns: true
+
 seeds:
   dbt_project_evaluator:
     dbt_project_evaluator_exceptions:
       +enabled: false
-  
+
 on-run-end: "{{ dbt_project_evaluator.print_dbt_project_evaluator_issues() }}"
