--- a/models/marts/finance/fct_mrr.yml
+++ b/models/marts/finance/fct_mrr.yml
@@ -43,3 +43,9 @@ models:
 
       - name: month_retained_number
         description: The number of months the subscription has been retained since it was started (first month = 0).
+
+      - name: rolling_agg_avg_7_mrr_amount
+        description: Rolling `mrr_amount` average over 7 periods partitioned by user
+
+      - name: rolling_agg_sum_7_mrr_amount
+        description: Rolling `mrr_amount` average over 7 periods partitioned by user
