--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,10 +28,19 @@ models:
   +persist_docs:
     relation: true
     columns: true
+  
+  dbt_snowflake_monitoring:
+    +database: DEV
+    +schema: DBT_JSRUJANREDDYGMAILCOM
+#   +enabled: "{{ (target.name == 'prod') | as_bool }}"
 
 seeds:
   dbt_project_evaluator:
     dbt_project_evaluator_exceptions:
       +enabled: false
+  course_advanced_dbt:
+    unit_testing:
+      +schema: unit_testing
+      +tags: unit_testing
 
 on-run-end: "{{ dbt_project_evaluator.print_dbt_project_evaluator_issues() }}"
