--- a/models/staging/bingeflix/stg_bingeflix_subscription_plans.yml
+++ b/models/staging/bingeflix/stg_bingeflix_subscription_plans.yml
@@ -12,15 +12,11 @@ models:
 
       - name: plan_name
         description: '{{ doc("bingeflix_subscription_plans_plan_name") }}'
-        tests:
-          - not_null
 
       - name: pricing
         description: '{{ doc("bingeflix_subscription_plans_pricing") }}'
         tests:
-          - not_null
+          - column_greater_than_0
 
       - name: payment_period
         description: '{{ doc("bingeflix_subscription_plans_payment_period") }}'
-        tests:
-          - not_null
