message-project week-4

--- a/models/staging/bingeflix/stg_bingeflix_subscription_plans.yml
+++ b/models/staging/bingeflix/stg_bingeflix_subscription_plans.yml
@@ -16,7 +16,7 @@ models:
       - name: pricing
         description: '{{ doc("bingeflix_subscription_plans_pricing") }}'
         tests:
-          - column_greater_than_0
+          - column_is_positive
 
       - name: payment_period
         description: '{{ doc("bingeflix_subscription_plans_payment_period") }}'
